[tool.poetry]
name = "pg13"
version = "1.0.0"
description = "A needlessly complicated point system bot for Discord."
authors = ["Zane Othman-Gomez <zane.othman@gmail.com>"]
license = "ISC"

[tool.poetry.dependencies]
python = "^3.10"
aiosqlite = "^0.17.0"
asyncpg = "^0.26.0"
"discord.py" = "^2.0.0"
systemd-python = "^234"
toml = "^0.10.2"

[tool.poetry.scripts]
pg-13 = "pg13:run_bot"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
