[tool.poetry]
name = "pg13"
version = "1.2.0"
description = "A needlessly complicated point system bot for Discord."
authors = ["5t0n3 <1nk5t0n3@gmail.com>"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^3.10"
aiosqlite = "^0.17.0"
asyncpg = "^0.27.0"
"discord.py" = "^2.1.0"
systemd-python = "^234"
toml = "^0.10.2"

[tool.poetry.scripts]
pg-13 = "pg13:run_bot"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
